--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -6,16 +6,16 @@
     <div class="headborder">
       <div class="headline">
         <div class="headlinelefticon">
-          <%= image_tag 'calendar.png', class: 'iconcalendar' %>
+          <%= image_tag('calendar.png', class: 'iconcalendar') %>
         </div>
         <div class="headlineleft">
           <%= f.name  %>
         </div>
         <div class="headlineright">
-          <%= link_to image_tag( "pen.png", :class => "iconedit" ), edit_project_path(f.id) %>
+          <%= link_to image_tag('pen.png', class: 'iconedit'), edit_project_path(f.id) %>
         </div>
         <div class="headlineright">
-          <%= link_to image_tag( "bucket.png" , :class => "icondelete" ), project_path(f.id), :method => :delete %>
+          <%= link_to image_tag('bucket.png' , class: 'icondelete'), project_path(f.id), method: :delete %>
         </div>
       </div>
     </div>
@@ -25,39 +25,39 @@
           <%= image_tag 'cross.png', class: 'iconcross' %>
         </div>
         <div class="headtaskcreateiconleft">
-        <%= form_for(:task, :url => {:controller => :tasks, :action => :create}) do |ff| %>
-          <% if f.errors.any? %>
-          <ul>
-            <% f.errors.full_messages.each do |msg| %>
-              <li><%= msg %></li>
+          <%= form_for(:task, url: { controller: :tasks, action: :create }) do |ff| %>
+            <% if f.errors.any? %>
+            <ul>
+              <% f.errors.full_messages.each do |msg| %>
+                <li><%= msg %></li>
+              <% end %>
+            </ul>
             <% end %>
-          </ul>
+            <%= ff.text_field :name, placeholder: 'Start typing here to create a task...' %>
+            <%= ff.hidden_field :project_id, value: f.id %>
+            </div>
+            <div class="headtaskcreateiconleft">
+            <%= ff.submit 'Create' %>
           <% end %>
-          <%= ff.text_field :name, :placeholder => "Start typing here to create a task..." %>
-          <%= ff.hidden_field :project_id, :value => f.id %>
-          </div>
-          <div class="headtaskcreateiconleft">
-          <%= ff.submit "Create" %>
-        <% end %>
         </div>
       </div>
     </div>
     <div class="headbodyborder">
       <div class="headtasklist">
-          <% f.tasks.each do |fff| %>
-            <div class="freefield"></div>
-            <div class="headtask">
-              <div class="headlineleftdone"><%= Task.task_state(fff.status) %></div>
-              <div class="headlineleft">
-              <%= fff.name %>
-                </div>
-              <div class="headlineright2">
-                <%= link_to image_tag( "pen.png", :class => "iconedittask" ), edit_task_path(fff.id) %>
+        <% f.tasks.each do |fff| %>
+          <div class="freefield"></div>
+          <div class="headtask">
+            <div class="headlineleftdone"><%= Task.task_state(fff.status) %></div>
+            <div class="headlineleft">
+            <%= fff.name %>
               </div>
-              <div class="headlineright2">
-                <%= link_to image_tag( "bucket.png" , :class => "icondeletetask" ), task_path(fff.id), :method => :delete %>
-              </div>
+            <div class="headlineright2">
+              <%= link_to image_tag('pen.png', class: 'iconedittask'), edit_task_path(fff.id) %>
             </div>
+            <div class="headlineright2">
+              <%= link_to image_tag('bucket.png', class: 'icondeletetask'), task_path(fff.id), method: :delete %>
+            </div>
+          </div>
         <% end %>
       </div>
     </div>
