--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -1,6 +1,6 @@
 <h1>Create Project.</h1>
 <div class="elementform">
-  <%= form_for(:project, :url => {:action => :create}) do |f| %>
+  <%= form_for(:project, url: { action: :create }) do |f| %>
     <%= render partial: 'projects/form', locals: { f: f } %>
   <% end %>
 </div>
