--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -49,8 +49,18 @@
           <div class="headtask">
             <div class="headlineleftdone"><%= Task.task_state(fff.status) %></div>
             <div class="headlineleft">
-            <%= fff.name %>
+              <%= fff.name %>
+            </div>
+            <% if fff.move_up? %>
+              <div class="headlineright2">
+                <%= link_to image_tag('arrow_up.png', class: 'iconarrowuptask'), task_up_path(fff.id) %>
               </div>
+            <% end %>
+            <% if fff.move_down? %>
+              <div class="headlineright2">
+                <%= link_to image_tag('arrow_down.png', class: 'iconarrowdowntask'), task_down_path(fff.id) %>
+              </div>
+            <% end %>
             <div class="headlineright2">
               <%= link_to image_tag('pen.png', class: 'iconedittask'), edit_task_path(fff.id) %>
             </div>
